Updated ExpandablePicker to use a preset sizing value Added skinning support. Minor cleanup and naming changes. Assigned ExpandablePicker a button class to ensure it stays vertically aligned with the picker, though it's not technically necessary because the current styling rules achieve this, but it will help in the future, in case of any unexpected changes.
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/packages/moonstone/ExpandablePicker/ExpandablePicker.less
+++ b/packages/moonstone/ExpandablePicker/ExpandablePicker.less
@@ -1,3 +1,13 @@
-.pickerContainer {
-	padding-top: 1px;
-}
+// ExpandablePicker.less
+//
+@import '../styles/variables.less';
+@import '../styles/skin.less';
+
+.applySkins({
+	.expandablePicker {
+		.picker,
+		.button {
+			margin-top: @moon-spotlight-outset;
+		}
+	}
+});
